# pypline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: fib.py  main.py
tests/: test_lib.py  test_main.py
